--- a/src/index.css
+++ b/src/index.css
@@ -118,9 +118,9 @@ body {
 .form-title {
   text-align: center;
   margin-bottom: 3rem;
-} */
+} 
  .form-image {
-  /* flex: 1; */
+
   min-width: 800px;
   min-height: 800px;
 }
